# x11-game-resize

./: .gitignore  CMakeLists.txt  README.md  options.cmake
resizer/: CMakeLists.txt
resizer/src/: main.cpp
